[gd_scene load_steps=39 format=3 uid="uid://dtw7wu10r7kbk"]

[ext_resource type="Texture2D" uid="uid://2eynch24d576" path="res://asset/visual/sprite/minigame/bg.png" id="1_06gx8"]
[ext_resource type="Script" path="res://script/minigame/drum/DrumMinigame.gd" id="1_cdk5x"]
[ext_resource type="FontFile" uid="uid://ckewprv66gyir" path="res://asset/font/MontserratAlternates-ExtraBold.otf" id="2_5q00m"]
[ext_resource type="PackedScene" uid="uid://bcvytkjbnw1dt" path="res://scene/minigame/drum/Arrow.tscn" id="2_phryr"]
[ext_resource type="AudioStream" uid="uid://dmgd1gx0wf6kw" path="res://asset/sound/bgm/hòa-tấu-nhạc-cụ-dân-tộc-việt-nam--sài-gòn-ơi--band--mv-4k.mp3" id="3_m1vvr"]
[ext_resource type="Resource" uid="uid://hj8eue1437o" path="res://data/music_sheet/mot_vong_vn_phuong.tres" id="3_ngr75"]
[ext_resource type="FontFile" uid="uid://cqdodb7scm4sn" path="res://asset/font/Montserrat-Bold.otf" id="3_xew8q"]
[ext_resource type="FontFile" uid="uid://32f22jx82rbv" path="res://asset/font/Montserrat-SemiBold.otf" id="4_pcj17"]
[ext_resource type="Script" path="res://script/ui/animation/SceneAnimationPlayer.gd" id="4_ujshx"]
[ext_resource type="Texture2D" uid="uid://dg0mv4ew6qu1n" path="res://asset/visual/sprite/minigame/trau1.png" id="10_n2hhg"]
[ext_resource type="PackedScene" uid="uid://b3i3dc777cxtd" path="res://scene/dialogic/style/mainstyle/PauseMenu/MinigamePauseMenu.tscn" id="10_snpuc"]
[ext_resource type="Texture2D" uid="uid://ddtxtfdmub4kq" path="res://asset/visual/sprite/minigame/trau2.png" id="11_7vrsb"]
[ext_resource type="Texture2D" uid="uid://dg7a8jws8ysmw" path="res://asset/visual/sprite/minigame/trống.png" id="12_uxmxf"]
[ext_resource type="Texture2D" uid="uid://qq6wqqvkh11v" path="res://asset/visual/sprite/minigame/lua1.png" id="13_4wl8u"]
[ext_resource type="Texture2D" uid="uid://bw73mf3x7x7q8" path="res://asset/visual/sprite/minigame/lua2.png" id="14_ww2ds"]

[sub_resource type="Animation" id="Animation_ixgu3"]
resource_name = "entry"

[sub_resource type="Animation" id="Animation_0vf5a"]
resource_name = "exit"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3bq8x"]
_data = {
"entry": SubResource("Animation_ixgu3"),
"exit": SubResource("Animation_0vf5a")
}

[sub_resource type="Animation" id="Animation_bil8j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Trau/TrauSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Trau/TrauSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Trau/Sprite2D2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_2tlpq"]
resource_name = "drum_hit"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Trau/TrauSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1),
"transitions": PackedFloat32Array(1, 2.37841, 0.466517),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -100), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Trau/TrauSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Trau/Sprite2D2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.301942, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a5a0q"]
_data = {
"RESET": SubResource("Animation_bil8j"),
"drum_hit": SubResource("Animation_2tlpq")
}

[sub_resource type="Animation" id="Animation_ow25d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Grass/AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Grass/AnimatedSprite2D2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Grass/AnimatedSprite2D3:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Grass/AnimatedSprite2D5:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Grass/AnimatedSprite2D4:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_c010i"]
resource_name = "grass_growth"
length = 60.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Grass/AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 49.9667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Grass/AnimatedSprite2D2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 31.9333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Grass/AnimatedSprite2D3:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 20.2667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Grass/AnimatedSprite2D5:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 56.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Grass/AnimatedSprite2D4:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 43.9333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uprtb"]
_data = {
"RESET": SubResource("Animation_ow25d"),
"grass_growth": SubResource("Animation_c010i")
}

[sub_resource type="Animation" id="Animation_khvnv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Grass/AnimatedSprite2D:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Grass/AnimatedSprite2D2:skew")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Grass/AnimatedSprite2D3:skew")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Grass/AnimatedSprite2D4:skew")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.0872665]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Grass/AnimatedSprite2D5:skew")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.0872665]
}

[sub_resource type="Animation" id="Animation_wdh0d"]
resource_name = "grass_sway"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Grass/AnimatedSprite2D:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.366667, 0.7),
"transitions": PackedFloat32Array(0.5, 0.63728, 1.41421),
"update": 0,
"values": [0.0, -0.0994838, 0.0925025]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Grass/AnimatedSprite2D2:skew")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.466667, 0.8),
"transitions": PackedFloat32Array(1.93187, 0.5, 1.93187),
"update": 0,
"values": [0.0, -0.0872665, 0.0872665]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Grass/AnimatedSprite2D3:skew")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0872665, 0.0, -0.0872665]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Grass/AnimatedSprite2D4:skew")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 0.533333, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.0872665, 0.0872665, -0.0174533]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Grass/AnimatedSprite2D5:skew")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.0666667, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.0872665, 0.0872665, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_koxx2"]
_data = {
"RESET": SubResource("Animation_khvnv"),
"grass_sway": SubResource("Animation_wdh0d")
}

[sub_resource type="LabelSettings" id="LabelSettings_vs22p"]
font = ExtResource("2_5q00m")
font_size = 48
font_color = Color(0.372549, 0.243137, 0.0862745, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5lkac"]
font = ExtResource("2_5q00m")
font_size = 128
font_color = Color(0.431373, 0.247059, 0.0509804, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yn3lx"]
font = ExtResource("3_xew8q")
font_size = 48
font_color = Color(0.372549, 0.243137, 0.0862745, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wmnsp"]
font = ExtResource("3_xew8q")
font_size = 96
font_color = Color(0.411765, 0.219608, 0.0156863, 1)

[sub_resource type="LabelSettings" id="LabelSettings_f77gr"]
font = ExtResource("4_pcj17")
font_size = 32
font_color = Color(0.372549, 0.243137, 0.0862745, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_7u4eb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_n2hhg")
}, {
"duration": 1.0,
"texture": ExtResource("11_7vrsb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jyxpg"]
size = Vector2(150, 200)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m0ck7"]
size = Vector2(90, 200)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jpbhf"]
size = Vector2(40, 200)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hudub"]
size = Vector2(50, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_u4ho3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_4wl8u")
}, {
"duration": 1.0,
"texture": ExtResource("14_ww2ds")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="DrumMinigame" type="Node2D"]
script = ExtResource("1_cdk5x")
arrow_packed = ExtResource("2_phryr")
travel_time = 6.0
music_sheet = ExtResource("3_ngr75")

[node name="StageAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3bq8x")
}
script = ExtResource("4_ujshx")

[node name="TrauAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a5a0q")
}
script = ExtResource("4_ujshx")

[node name="GrowthAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uprtb")
}
script = ExtResource("4_ujshx")

[node name="GrassAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_koxx2")
}
script = ExtResource("4_ujshx")

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
bus = &"SFX"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_m1vvr")
bus = &"Music"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(0.24, 0.24)
texture = ExtResource("1_06gx8")

[node name="ArrowSpawn" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(1138, 49)

[node name="UI" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="UI"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ComboCounter" type="Control" parent="UI/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/PanelContainer/ComboCounter"]
layout_mode = 2
offset_left = 13.0
offset_top = 505.0
offset_right = 224.0
offset_bottom = 584.0
text = "COMBO"
label_settings = SubResource("LabelSettings_vs22p")

[node name="ComboNum" type="Label" parent="UI/PanelContainer/ComboCounter"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 15.0
offset_top = 549.0
offset_right = 226.0
offset_bottom = 706.0
text = "0"
label_settings = SubResource("LabelSettings_5lkac")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Scoreboard" type="Control" parent="UI/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/PanelContainer/Scoreboard"]
layout_mode = 0
offset_left = 1004.0
offset_top = 95.0
offset_right = 1139.0
offset_bottom = 155.0
text = "Điểm"
label_settings = SubResource("LabelSettings_yn3lx")

[node name="ScoreNum" type="Label" parent="UI/PanelContainer/Scoreboard"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 998.0
offset_top = 144.0
offset_right = 1277.0
offset_bottom = 262.0
text = "0 / 30"
label_settings = SubResource("LabelSettings_wmnsp")

[node name="PanelContainer" type="PanelContainer" parent="UI/PanelContainer/Scoreboard"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 1271.0
offset_top = 89.0
offset_right = 1717.0
offset_bottom = 158.0

[node name="PlayerName" type="Label" parent="UI/PanelContainer/Scoreboard/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Trâu Vàng "
label_settings = SubResource("LabelSettings_f77gr")
horizontal_alignment = 2

[node name="PauseMenu" parent="UI/PanelContainer" instance=ExtResource("10_snpuc")]
layout_mode = 2

[node name="Trau" type="Node2D" parent="."]
position = Vector2(-614, -327.995)
scale = Vector2(0.225, 0.225)

[node name="TrauSprite" type="AnimatedSprite2D" parent="Trau"]
sprite_frames = SubResource("SpriteFrames_7u4eb")

[node name="Sprite2D2" type="Sprite2D" parent="Trau"]
position = Vector2(666.667, 475.556)
texture = ExtResource("12_uxmxf")

[node name="ArrowEnd" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-500, 47)

[node name="BadArea" type="Area2D" parent="ArrowEnd"]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArrowEnd/BadArea"]
shape = SubResource("RectangleShape2D_jyxpg")

[node name="OkayArea" type="Area2D" parent="ArrowEnd"]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArrowEnd/OkayArea"]
shape = SubResource("RectangleShape2D_m0ck7")

[node name="PerfectArea" type="Area2D" parent="ArrowEnd"]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArrowEnd/PerfectArea"]
shape = SubResource("RectangleShape2D_jpbhf")

[node name="DeletionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeletionArea"]
position = Vector2(-651, 45)
shape = SubResource("RectangleShape2D_hudub")

[node name="Grass" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Grass"]
position = Vector2(-707, 541)
scale = Vector2(0.29, 0.29)
sprite_frames = SubResource("SpriteFrames_u4ho3")
centered = false
offset = Vector2(-483, -1063)

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="Grass"]
position = Vector2(-361, 541)
scale = Vector2(0.29, 0.29)
sprite_frames = SubResource("SpriteFrames_u4ho3")
centered = false
offset = Vector2(-483, -1063)

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="Grass"]
position = Vector2(-2.99994, 539)
scale = Vector2(0.29, 0.29)
sprite_frames = SubResource("SpriteFrames_u4ho3")
centered = false
offset = Vector2(-483, -1063)

[node name="AnimatedSprite2D4" type="AnimatedSprite2D" parent="Grass"]
position = Vector2(339, 539)
scale = Vector2(0.29, 0.29)
skew = -0.0872665
sprite_frames = SubResource("SpriteFrames_u4ho3")
centered = false
offset = Vector2(-483, -1063)

[node name="AnimatedSprite2D5" type="AnimatedSprite2D" parent="Grass"]
position = Vector2(715, 539)
scale = Vector2(0.29, 0.29)
skew = -0.0872665
sprite_frames = SubResource("SpriteFrames_u4ho3")
centered = false
offset = Vector2(-483, -1063)

[connection signal="body_entered" from="DeletionArea" to="." method="_on_deletion_area_entered"]
